services/api/api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api-default
  annotations:
    haproxy.org/path-rewrite: /python-test-api/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
    - host: api.kamuridesu.com
      http:
        paths:
          - path: /api/guesser
            pathType: Prefix
            backend:
              service:
                name: deepdanbooryu-service
                port:
                  number: 8080
          - path: /api/ytdl
            pathType: Prefix
            backend:
              service:
                name: ytdl-producer-api-service
                port:
                  number: 8080
          - path: /python-test-api
            pathType: Prefix
            backend:
              service:
                name: python-test-api-service
                port:
                  number: 8080
